--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
     "gatsby": "^2.0.33",
     "gatsby-plugin-google-analytics": "^2.0.14",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-source-contentful": "^2.0.71",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
